--- a/components/package.json
+++ b/components/package.json
@@ -9,7 +9,8 @@
     "watch": "tsc -b -w --preserveWatchOutput",
     "compile": "tsc -b",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic --project-token c18fb2952db5"
   },
   "dependencies": {
     "@types/react-dom": "^17.0.3",
@@ -18,10 +19,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
-    "@storybook/addon-actions": "^6.2.5",
-    "@storybook/addon-essentials": "^6.2.5",
-    "@storybook/addon-links": "^6.2.5",
-    "@storybook/react": "^6.2.5",
+    "@storybook/addon-actions": "^6.2.7",
+    "@storybook/addon-essentials": "^6.2.7",
+    "@storybook/addon-links": "^6.2.7",
+    "@storybook/react": "^6.2.7",
     "@types/react": "^17.0.3",
     "babel-loader": "^8.2.2",
     "chromatic": "^5.7.1",
