--- a/components/tsconfig.json
+++ b/components/tsconfig.json
@@ -1,8 +1,8 @@
 {
-    "extends": "../../tsconfig.json",
+    "extends": "./../tsconfig.json",
     "compilerOptions": {
       "outDir": "build",
-      "rootDir": "components/ui",
+      "rootDir": "../components/ui",
       "target": "ES2019",
       "lib": [ "dom", "ES2019"]
     },
