--- a/package.json
+++ b/package.json
@@ -9,30 +9,52 @@
     "watch": "tsc -b -w --preserveWatchOutput",
     "compile": "tsc -b",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook -o docs",
-    "chromatic": "npx chromatic --project-token c18fb2952db5"
+    "build-storybook": "build-storybook --docs -o docs"
   },
   "dependencies": {
+    "@storybook/addon-storysource": "^6.2.9",
     "@types/react-dom": "^17.0.3",
+    "@types/styled-components": "^5.1.9",
+    "eslint": "^7.26.0",
+    "eslint-plugin-functional": "*",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-jsdoc": "*",
+    "prettier": "*",
+    "prettier-plugin-organize-imports": "*",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
-    "typescript": "^4.2.3",
     "@babel/core": "^7.13.14",
-    "@storybook/addon-actions": "^6.2.7",
-    "@storybook/addon-essentials": "^6.2.7",
-    "@storybook/addon-links": "^6.2.7",
-    "@storybook/react": "^6.2.7",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/react": "^6.2.9",
+    "@testing-library/react": "^11.2.6",
     "@types/react": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
     "babel-loader": "^8.2.2",
-    "chromatic": "^5.7.1",
+    "eslint": "^7.16.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-testing-library": "^3.10.1",
     "html-webpack-plugin": "^5.3.1",
+    "prettier": "^2.2.1",
+    "prettier-plugin-organize-imports": "^1.1.1",
+    "typescript": "^4.2.3",
     "webpack": "^5.30.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   },
   "workspaces": [
-      "components/*"
+    "base/*"
   ]
 }
