--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,15 +1,22 @@
-name: Upload to S3
+name: Example workflow for S3 Deploy
 
 on: [push]
 
 jobs:
-  upload:
+  run:
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
-      - uses: actions/checkout@master
-      - uses: shallwefootball/s3-upload-action@master
-        with:
-          aws_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-          aws_bucket: ${{ secrets.AWS_S3_BUCKET }}
-          source_dir: 'docs'
+        - uses: actions/checkout@v2
+
+        - name: Deploy
+          uses: reggionick/s3-deploy@v3
+          with:
+            folder: docs
+            bucket: ${{ secrets.AWS_S3_BUCKET }}
+            bucket-region: ${{ secrets.S3_BUCKET_REGION }}
+            delete-removed: true
+            no-cache: true
+            private: false
