Fix tests not having a theme provider.

--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,13 @@
         "@babel/preset-typescript"
     ],
     "plugins": [
-        "@babel/plugin-proposal-class-properties"
+        "@babel/plugin-proposal-class-properties",
+        "module-resolver",
+        {
+          "root": ["./malty"],
+          "alias": {
+            "@": "./malty",
+          }
+        }
     ]
 }
