Setup initial use of themes from json files.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,13 @@
     "strict": true,
 
     "skipLibCheck": true,
-
     "jsx": "react",
     "esModuleInterop": true,
     "module": "commonjs",
     "moduleResolution": "node",
     "target": "es2015",
-
-    "composite": true
-  }
+    "resolveJsonModule": true,
+    "composite": true,
+  },
+  "include": ["**/*.json"]
 }
