--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,5 @@
   "trailingComma": "none",
   "singleQuote": true,
   "printWidth": 120,
-  "tabWidth": 2,
-  "endOfLine": "auto"
+  "tabWidth": 2
 }
