--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "clean": "rm -rf ./dist && rm -rf ./build && rm tsconfig.tsbuildinfo",
+    "clean": "rm -rf ./dist && rm -rf ./build",
     "watch": "tsc -b -w --preserveWatchOutput",
     "compile": "tsc -b",
     "start": "bit compile && bit start",
-    "build": "bit install && bit compile && bit start",
+    "serve": "bit install && bit compile && bit start",
     "storybook": "start-storybook -s ./public -p 6006",
     "build-storybook": "build-storybook --docs -o docs",
     "test": "jest",
@@ -15,11 +15,8 @@
     "lint": "eslint \"malty/**/*.{ts,tsx,js,jsx}\""
   },
   "dependencies": {
-    "@storybook/react": "^6.3.6",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.2.3",
-    "styled-normalize": "^8.0.7"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -27,10 +24,12 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@carlsberg/eslint-config-carlsberg": "^0.0.1",
-    "@storybook/addon-actions": "^6.3.6",
-    "@storybook/addon-essentials": "^6.3.6",
-    "@storybook/addon-links": "^6.3.6",
-    "@storybook/addon-storysource": "^6.3.6",
+    "@storybook/react": "^6.3.10",
+    "@storybook/addon-actions": "^6.3.10",
+    "@storybook/addon-essentials": "^6.3.10",
+    "@storybook/addon-links": "^6.3.10",
+    "@storybook/addon-storysource": "^6.3.10",
+    "@storybook/addon-docs": "^6.3.10",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
@@ -68,10 +67,13 @@
     "ts-loader": "^9.2.2",
     "ts-node": "^10.0.0",
     "typescript": "^4.2.3",
+    "url-loader": "^4.1.1",
+    "uuid": "^8.3.2",
     "webpack": "^5.30.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2",
-    "uuid": "^8.3.2"
+    "styled-components": "^5.2.3",
+    "styled-normalize": "^8.0.7"
   },
   "workspaces": [
     "malty/*"
