--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@carlsberg/eslint-config-carlsberg": "^0.0.1",
-    "@storybook/react": "^6.3.10",
-    "@storybook/addon-actions": "^6.3.10",
-    "@storybook/addon-essentials": "^6.3.10",
-    "@storybook/addon-links": "^6.3.10",
-    "@storybook/addon-storysource": "^6.3.10",
-    "@storybook/addon-docs": "^6.3.10",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-docs": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/react": "^6.3.12",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
@@ -62,18 +61,20 @@
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "prettier-plugin-organize-imports": "^1.1.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
+    "styled-components": "^5.2.3",
+    "styled-normalize": "^8.0.7",
     "ts-jest": "^26.5.6",
     "ts-loader": "^9.2.2",
     "ts-node": "^10.0.0",
     "typescript": "^4.2.3",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.2",
-    "webpack": "^5.30.0",
+    "webpack": "^5.58.2",
     "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2",
-    "styled-components": "^5.2.3",
-    "styled-normalize": "^8.0.7"
+    "webpack-dev-server": "^3.11.2"
   },
   "workspaces": [
     "malty/*"
