--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,35 +1,13 @@
-name: "CodeQL"
-
+name: Security
 on:
   push:
-    branches: [ master, main, develop ]
+    branches: [develop, main]
   pull_request:
-    branches: [ master, main, develop ]
+    branches: [develop, main]
   schedule:
-    - cron: '26 2 * * 6'
-
+    - cron: '30 19 * * 1'
+paths-ignore:
+  - docs
 jobs:
-  analyze:
-    name: Analyze
-    runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'javascript' ]
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v1
-      with:
-        languages: ${{ matrix.language }}
-
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v1
+  security:
+    uses: carlsberggbs/cx-github-workflows/.github/workflows/security.yml@main
