CodeQL GH Action bug fix (#83)
* Update yarn.lock

* Update codeql-analysis.yml

* CodeQL GH Action bug fix

* Update security-config.yml

* Update security.yml

* CodeQL GH Action "config" folder fix

* Delete codeql-analysis.yml

* Update security.yml

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -6,8 +6,8 @@ on:
     branches: [develop, main]
   schedule:
     - cron: '30 19 * * 1'
-paths-ignore:
-  - docs
 jobs:
   security:
     uses: carlsberggbs/cx-github-workflows/.github/workflows/security.yml@main
+    with:
+      codeql-config-file: ./.github/config/security-config.yml
