--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "carlsberg-malty",
-  "homepage": "https://carlsberggbs.atlassian.net/servicedesk/customer/portal/24",
-  "url": "https://carlsberggbs.atlassian.net/servicedesk/customer/portal/24",
-  "version": "1.0.8",
+  "homepage": "https://malty.carlsberggroup.com/",
+  "url": "https://malty.carlsberggroup.com",
+  "version": "1.0.9",
   "private": true,
   "keywords": [
     "carlsberg",
@@ -81,7 +81,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^4.6.0",
     "html-webpack-plugin": "^5.3.1",
-    "jest": "^26.6.3",
+    "jest": "^27.5.1",
     "prettier": "^2.2.1",
     "prettier-plugin-organize-imports": "^1.1.1",
     "react": "^17.0.2",
@@ -95,9 +95,9 @@
     "typescript": "^4.2.3",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.2",
-    "webpack": "^5.58.2",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   },
   "workspaces": [
     "malty/*"
