--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,8 +4,6 @@ updates:
     directory: '/'
     schedule:
       interval: 'weekly'
+    target-branch: 'develop'
     ignore:
       - dependency-name: '@storybook/*'
-      - dependency-name: '@testing-library/*'
-      - dependency-name: '@types/*'
-      - dependency-name: '*eslint*'
