--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,7 @@ updates:
     directory: '/'
     schedule:
       interval: 'weekly'
+    target-branch: 'develop'
     ignore:
       - dependency-name: '@storybook/*'
       - dependency-name: '@testing-library/*'
