--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "react": "^17.0.2",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
@@ -57,6 +58,7 @@
     "@types/babel__core": "^7.1.14",
     "@types/jest": "^27.4.1",
     "@types/react": "^17.0.3",
+    "@types/react-datepicker": "^4.3.4",
     "@types/react-dom": "^17.0.3",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.9",
