--- a/package.json
+++ b/package.json
@@ -103,7 +103,8 @@
     "malty/*"
   ],
   "resolutions": {
-    "styled-components": "^5"
+    "styled-components": "^5",
+    "node-forge": "^1.3.0"
   },
   "bit": {
     "resolveModules": {
