--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -117,3 +117,22 @@ branches:
         apps: []
         users: []
         teams: [malty-contributors]
+
+  - name: maintenance/*
+    protection:
+      required_pull_request_reviews:
+        required_approving_review_count: 1
+        dismiss_stale_reviews: true
+        require_code_owner_reviews: true
+        dismissal_restrictions:
+          users: []
+          teams: []
+      required_status_checks:
+        strict: true
+        contexts: []
+      enforce_admins: true
+      required_linear_history: true
+      restrictions:
+        apps: []
+        users: []
+        teams: [malty-maintainers]
