--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "carlsberg-malty",
   "homepage": "https://malty.carlsberggroup.com/",
   "url": "https://malty.carlsberggroup.com",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "private": true,
   "keywords": [
     "carlsberg",
@@ -104,7 +104,10 @@
   ],
   "resolutions": {
     "styled-components": "^5",
-    "node-forge": "^1.3.0"
+    "node-forge": "^1.3.0",
+    "braces": "^2.3.1",
+    "trim": "^0.0.3",
+    "glob-parent": "^5.1.2"
   },
   "bit": {
     "resolveModules": {
