--- a/package.json
+++ b/package.json
@@ -107,7 +107,8 @@
     "node-forge": "^1.3.0",
     "braces": "^2.3.1",
     "trim": "^0.0.3",
-    "glob-parent": "^5.1.2"
+    "glob-parent": "^5.1.2",
+    "deepmerge-ts": "^4.0.2"
   },
   "bit": {
     "resolveModules": {
