--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "carlsberg-malty",
   "homepage": "https://malty.carlsberggroup.com/",
   "url": "https://malty.carlsberggroup.com",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "private": true,
   "keywords": [
     "carlsberg",
@@ -52,8 +52,8 @@
     "@storybook/react": "^6.4.0",
     "@storybook/theming": "^6.4.9",
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^13.1.9",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^14.0.4",
     "@types/babel__core": "^7.1.14",
     "@types/jest": "^27.4.1",
     "@types/react": "^17.0.3",
@@ -104,7 +104,11 @@
   ],
   "resolutions": {
     "styled-components": "^5",
-    "node-forge": "^1.3.0"
+    "node-forge": "^1.3.0",
+    "braces": "^2.3.1",
+    "trim": "^0.0.3",
+    "glob-parent": "^5.1.2",
+    "deepmerge-ts": "^4.0.2"
   },
   "bit": {
     "resolveModules": {
