--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -75,6 +75,7 @@ branches:
         contexts: []
       enforce_admins: true
       required_linear_history: true
+      required_conversation_resolution: true
       restrictions:
         apps: []
         users: []
@@ -94,6 +95,7 @@ branches:
         contexts: []
       enforce_admins: true
       required_linear_history: true
+      required_conversation_resolution: true
       restrictions:
         apps: []
         users: []
