--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-datepicker": "^4.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -58,6 +59,7 @@
     "@types/jest": "^27.4.1",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.3",
+    "@types/react-datepicker": "^4.3.4",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.9",
     "@types/testing-library__jest-dom": "^5.14.3",
