--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "carlsberg-malty",
   "homepage": "https://malty.carlsberggroup.com/",
   "url": "https://malty.carlsberggroup.com",
-  "version": "1.0.15",
+  "version": "1.0.17",
   "private": true,
   "keywords": [
     "carlsberg",
@@ -33,8 +33,9 @@
     "lint": "eslint \"malty/**/*.{ts,tsx,js,jsx}\""
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-datepicker": "^4.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -52,12 +53,13 @@
     "@storybook/react": "^6.4.0",
     "@storybook/theming": "^6.4.9",
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^14.0.4",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "13.1.9",
     "@types/babel__core": "^7.1.14",
     "@types/jest": "^27.4.1",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
+    "@types/react-datepicker": "^4.3.4",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.9",
     "@types/testing-library__jest-dom": "^5.14.3",
@@ -79,7 +81,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-testing-library": "^5.2.1",
+    "eslint-plugin-testing-library": "^4.6.0",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^27.5.1",
     "prettier": "^2.2.1",
@@ -104,11 +106,7 @@
   ],
   "resolutions": {
     "styled-components": "^5",
-    "node-forge": "^1.3.0",
-    "braces": "^2.3.1",
-    "trim": "^0.0.3",
-    "glob-parent": "^5.1.2",
-    "deepmerge-ts": "^4.0.2"
+    "node-forge": "^1.3.0"
   },
   "bit": {
     "resolveModules": {
