build(deps): Fixed deps, bumped version and added scripts
Fixed deps to help stabilize Bit issue, bumped version of the library and added scripts to help wipe clean local env, and run Bit.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "carlsberg-malty",
   "homepage": "https://malty.carlsberggroup.com/",
   "url": "https://malty.carlsberggroup.com",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "private": true,
   "keywords": [
     "carlsberg",
@@ -20,7 +20,9 @@
     "url": "https://github.com/CarlsbergGBS/cx-component-library.git"
   },
   "scripts": {
-    "clean": "rm -rf ./dist && rm -rf ./build",
+    "clean": "rm -rf ./dist && rm -rf ./build && rm -rf ./node_modules && rm -rf .git/bit && rm -f yarn.lock",
+    "wipe": "yarn cache clean --force && bit clear-cache",
+    "reset": "yarn clean && yarn wipe && yarn serve",
     "watch": "tsc -b -w --preserveWatchOutput",
     "compile": "tsc -b",
     "start": "bit compile && bit start",
@@ -86,8 +88,8 @@
     "jest": "^27.5.1",
     "prettier": "^2.2.1",
     "prettier-plugin-organize-imports": "^1.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-test-renderer": "^17.0.2",
     "styled-components": "^5.2.3",
     "styled-normalize": "^8.0.7",
@@ -106,7 +108,10 @@
   ],
   "resolutions": {
     "styled-components": "^5",
-    "node-forge": "^1.3.0"
+    "node-forge": "^1.3.1",
+    "glob-parent": "^5.1.2",
+    "trim": "0.0.3",
+    "braces": "2.3.2"
   },
   "bit": {
     "resolveModules": {
