--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "carlsberg-malty",
   "homepage": "https://malty.carlsberggroup.com/",
   "url": "https://malty.carlsberggroup.com",
-  "version": "1.0.18",
+  "version": "1.0.19",
   "private": true,
   "keywords": [
     "carlsberg",
@@ -35,8 +35,8 @@
     "lint": "eslint \"malty/**/*.{ts,tsx,js,jsx}\""
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-datepicker": "^4.7.0"
   },
   "devDependencies": {
@@ -56,11 +56,11 @@
     "@storybook/theming": "^6.4.9",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "13.1.9",
+    "@testing-library/user-event": "^13.1.9",
     "@types/babel__core": "^7.1.14",
     "@types/jest": "^27.4.1",
-    "@types/react": "17.0.3",
-    "@types/react-dom": "17.0.3",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "@types/react-datepicker": "^4.3.4",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.9",
@@ -88,8 +88,8 @@
     "jest": "^27.5.1",
     "prettier": "^2.2.1",
     "prettier-plugin-organize-imports": "^1.1.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
     "styled-components": "^5.2.3",
     "styled-normalize": "^8.0.7",
@@ -110,8 +110,8 @@
     "styled-components": "^5",
     "node-forge": "^1.3.1",
     "glob-parent": "^5.1.2",
-    "trim": "0.0.3",
-    "braces": "2.3.2"
+    "trim": "^0.0.3",
+    "braces": "^2.3.2"
   },
   "bit": {
     "resolveModules": {
