ci: Added overrides for Bit CI and disabled Preview

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -37,16 +37,16 @@
      */
     "packageManager": "teambit.dependencies/yarn",
     "overrides": {
-      "@types/react": "17.0.3",
-      "@types/react-dom": "17.0.3"
+      "@types/react": "^17.0.2",
+      "@types/react-dom": "^17.0.2"
     },
     "policy": {
       "dependencies": {
-        "@testing-library/react": "^11.2.7"
+        "@testing-library/react": "11.2.7"
       },
       "peerDependencies": {
-        "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
       }
     },
     "packageManagerArgs": [],
@@ -73,5 +73,8 @@
       },
       "teambit.react/react": {}
     }
+  },
+  "teambit.preview/preview": {
+    "disabled": true
   }
 }
