--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-datepicker": "^4.7.0"
+    "react-datepicker": "^4.7.0",
+    "react-popper": "^2.3.0",
+    "@popperjs/core": "^2.11.5"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
