--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,13 +1,12 @@
 name: Security
 on:
   push:
-    branches: [develop, main]
+    branches: [main]
   pull_request:
-    branches: [develop, main]
+    branches: [main]
   schedule:
     - cron: '30 19 * * 1'
 jobs:
   security:
     uses: carlsberggbs/cx-github-workflows/.github/workflows/security.yml@main
-    with:
-      codeql-config-file: ./.github/config/security-config.yml
+    
