--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,51 +1,54 @@
-name: Tests
+name: TestRun
+
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
+  workflow_dispatch:
 
-inputs:
-  node-version:
-    description: Node.js Version
-    default: '16'
-    required: false
-  bit-token:
-    description: A Bit token to fetch Malty components
-    required: false
-    
-runs:
-  using: composite
-  steps:
-    - uses: actions/setup-node@v2
-      with:
-        node-version: ${{ inputs.node-version }}
-        cache: yarn
+jobs:
+  test-run:
+    runs-on: ubuntu-latest
+    env:
+      BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2-beta
+        with:
+          node-version: '12'
 
-    - run: |
-        echo "Adding bit.dev to npm registry"
-        npm config set @bit:registry https://node.bit.dev
-        npm config set @carlsberggroup:registry=https://node.bit.dev
-        npm config set @teambit:registry=https://node.bit.dev
-        npm config set //node.bit.dev/:_authToken ${{ inputs.bit-token }}
-      shell: bash
+      - uses: actions/cache@v2
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
 
-    - run: |
-        echo "Installing Bit CLI"
-        npx @teambit/bvm install
-        export PATH=$HOME/bin:$PATH
-        bit config set user.token ${{ inputs.bit-token }}
-      shell: bash
+      - name: init bit.dev
+        run: |
+          echo "Adding bit.dev to npm registry"
+          npm config set @bit:registry https://node.bit.dev
+          npm config set @carlsberggroup:registry=https://node.bit.dev
+          npm config set @teambit:registry=https://node.bit.dev
+          npm config set //node.bit.dev/:_authToken ${BIT_TOKEN}
+          echo "Completed adding bit.dev to npm registry"
+        env:
+          BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
 
-    - name: Install Components
-      run: bit install
-      shell: bash
+      - name: Install Bit CLI
+        run: |
+          npx @teambit/bvm install
+          export PATH=$HOME/bin:$PATH
+          bit config set user.token ${{ inputs.bit-token }}
+        shell: bash
 
-    - name: Compile components
-      run: bit compile
-      shell: bash
+      - name: Install Components
+        run: bit install
+        shell: bash
 
-    - name: Unit Tests
-      run: |
-        yarn test
-      shell: bash
+      - name: Compile components
+        run: bit compile
+        shell: bash
+
+      - name: Unit Tests
+        run: yarn test
+        shell: bash
