--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,8 +8,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  pre-tests:
-    name: 'Env. Preparation'
+  tests-run:
+    name: 'Run Unit Tests'
     runs-on: ubuntu-latest
     env:
       BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
@@ -24,7 +24,7 @@ jobs:
           path: '**/node_modules'
           key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
 
-      - name: init bit.dev
+      - name: Register remote scopes
         run: |
           echo "Adding bit.dev to npm registry"
           npm config set @bit:registry https://node.bit.dev
@@ -42,12 +42,6 @@ jobs:
           bit config set user.token ${{ secrets.BIT_TOKEN }}
         shell: bash
 
-  deps-install:
-    name: 'Install Dependencies'
-    runs-on: ubuntu-latest
-    env:
-      BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
-    steps:
       - name: Install Components
         run: bit install
         shell: bash
@@ -56,12 +50,6 @@ jobs:
         run: bit compile
         shell: bash
 
-  tests-run:
-    name: 'Run Unit Tests'
-    runs-on: ubuntu-latest
-    env:
-      BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
-    steps:
       - name: Unit Tests
         run: yarn test
         shell: bash
