fix: Unit test fix

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,6 +39,7 @@ jobs:
         run: |
           npx @teambit/bvm install
           export PATH=$HOME/bin:$PATH
+          echo 'export PATH=$HOME/bin:$PATH' >> ~/.bashrc && source ~/.bashrc
           bit config set user.token ${{ secrets.BIT_TOKEN }}
         shell: bash
 
