--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,22 +35,13 @@ jobs:
         env:
           BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
 
-      - name: Install Bit CLI
+      - name: Run Unit Tests
         run: |
           npx @teambit/bvm install
           export PATH=$HOME/bin:$PATH
           echo 'export PATH=$HOME/bin:$PATH' >> ~/.bashrc && source ~/.bashrc
           bit config set user.token ${{ secrets.BIT_TOKEN }}
-        shell: bash
-
-      - name: Install Components
-        run: bit install
-        shell: bash
-
-      - name: Compile components
-        run: bit compile
-        shell: bash
-
-      - name: Unit Tests
-        run: yarn test
+          bit install
+          bit compile
+          yarn test
         shell: bash
