--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,6 @@ updates:
     directory: '/'
     schedule:
       interval: 'weekly'
-    target-branch: 'develop'
+    target-branch: 'main'
     ignore:
       - dependency-name: '@storybook/*'
