--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,6 @@ jobs:
           export PATH=$HOME/bin:$PATH
           echo 'export PATH=$HOME/bin:$PATH' >> ~/.bashrc && source ~/.bashrc
           bit config set user.token ${{ secrets.BIT_TOKEN }}
-          bit install
-          bit compile
+          yarn reset
           yarn test --ci --silent -u
         shell: bash
