--- a/.github/workflows/approval.yml
+++ b/.github/workflows/approval.yml
@@ -8,7 +8,7 @@ jobs:
   require_approval:
     name: Require Approval
     runs-on: ubuntu-latest
-    if: startsWith(github.event.pull_request.head.label, "feature/")
+    if: startsWith(github.event.pull_request.head.label, 'feature/')
     steps:
       - name: Check Reviewers
         run: |
