--- a/.github/workflows/approval.yml
+++ b/.github/workflows/approval.yml
@@ -28,8 +28,10 @@ jobs:
               user="$(echo $review | awk '{print $1}')"
               state="$(echo $review | awk '{print $2}')"
 
+              echo "1"
               gh api "/orgs/${{ github.repository_owner }}/teams/$team/memberships/$user" &>/dev/null
               resp_code=$?
+              echo "2 $resp_code"
 
               printf "checking %s: %s" "$user" "$state"
 
