--- a/.github/workflows/approval.yml
+++ b/.github/workflows/approval.yml
@@ -58,6 +58,6 @@ jobs:
           fi
 
           echo '{"name": "approval-workflow", "head_sha": "${{ github.event.pull_request.head.sha }}", "status": "completed", "conclusion": "$conclusion"}' \
-          | gh api "repos/${{ github.repository }}/check-runs"
+          | gh api "repos/${{ github.repository }}/check-runs" --input -
         env:
           GITHUB_TOKEN: ${{ steps.token.outputs.token }}
