--- a/.github/workflows/approval.yml
+++ b/.github/workflows/approval.yml
@@ -57,7 +57,7 @@ jobs:
               conclusion="success"
           fi
 
-          echo '{"name": "approval-workflow", "head_sha": "${{ github.event.pull_request.head.sha }}", "status": "completed", "conclusion": "$conclusion"}' \
+          echo "{\"name\": \"approval-workflow\", \"head_sha\": \"${{ github.event.pull_request.head.sha }}\", \"status\": \"completed\", \"conclusion\": \"$conclusion\"}" \
           | gh api "repos/${{ github.repository }}/check-runs" --input -
         env:
           GITHUB_TOKEN: ${{ steps.token.outputs.token }}
