--- a/.github/workflows/approval.yml
+++ b/.github/workflows/approval.yml
@@ -24,10 +24,11 @@ jobs:
           approved=0
           team="malty-designers"
           reviews=$(gh api "/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews" | jq -cr)
-          reviews=$(echo "$reviews" | jq -cr '.[] | (.user.login + " " + .state)')
+
+          echo "$reviews" | jq -cr '.[] | (.user.login + " " + .state)' > reviews.json
 
           if [[ "$reviews" != "" ]]; then
-            for review in "$reviews"; do
+            for review in "$(cat reviews.json)"; do
                 user="$(echo $review | awk '{print $1}')"
                 state="$(echo $review | awk '{print $2}')"
 
