--- a/.github/workflows/approval.yml
+++ b/.github/workflows/approval.yml
@@ -23,9 +23,10 @@ jobs:
         run: |
           approved=0
           team="malty-designers"
-          reviews=$(gh api "/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews" | jq -cr)
 
-          echo "$reviews" | jq -cr '.[] | (.user.login + " " + .state)' > reviews.json
+          gh api "/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews" \
+          | jq -cr '.[] \
+          | (.user.login + " " + .state)' > reviews.json
 
           if [[ "$reviews" != "" ]]; then
             for review in "$(cat reviews.json)"; do
