ci: create checks

--- a/.github/workflows/approval.yml
+++ b/.github/workflows/approval.yml
@@ -25,8 +25,7 @@ jobs:
           team="malty-designers"
 
           gh api "/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews" \
-          | jq -cr '.[] \
-          | (.user.login + " " + .state)' > reviews.json
+          | jq -cr '.[] | (.user.login + " " + .state)' > reviews.json
 
           if [[ "$reviews" != "" ]]; then
             for review in "$(cat reviews.json)"; do
