--- a/.github/workflows/approval.yml
+++ b/.github/workflows/approval.yml
@@ -27,6 +27,8 @@ jobs:
           gh api "/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews" \
           | jq -cr '.[] | (.user.login + " " + .state)' > reviews.json
 
+          cat reviews.json
+
           for review in "$(cat reviews.json)"; do
               user="$(echo $review | awk '{print $1}')"
               state="$(echo $review | awk '{print $2}')"
