ci: create checks

--- a/.github/workflows/approval.yml
+++ b/.github/workflows/approval.yml
@@ -29,8 +29,8 @@ jobs:
 
           cat reviews.json
 
-          IFS=$'\n'
-          for review in "$(cat reviews.json)"; do
+
+          IFS=$'\n' for review in "$(cat reviews.json)"; do
               user="$(echo $review | awk '{print $1}')"
               state="$(echo $review | awk '{print $2}')"
 
