--- a/.github/workflows/approval.yml
+++ b/.github/workflows/approval.yml
@@ -27,7 +27,7 @@ jobs:
 
             let { data: reviews } = await github.rest.pulls.listReviews({
               ...context.repo,
-              pull_number: context.pull_request.number,
+              pull_number: "${{ github.event.pull_request.number }}",
               per_page: 100,
             });
 
@@ -55,7 +55,7 @@ jobs:
             await github.checks.create({
               ...context.repo,
               name: "approval-workflow",
-              head_sha: context.pull_request.head.sha,
+              head_sha: "${{ github.event.pull_request.head.sha }}",
               status: "completed",
               conclusion: conclusion,
               output: {
