ci: add approval workflow

--- a/.github/workflows/approval.yml
+++ b/.github/workflows/approval.yml
@@ -46,7 +46,7 @@ jobs:
                     username: login,
                   });
 
-                  approved = true;
+                  conclusion = "success"
                   break;
                 } catch (_) {}
               }
