--- a/.github/workflows/bit.yml
+++ b/.github/workflows/bit.yml
@@ -63,6 +63,8 @@ jobs:
       - name: Create Pull Request
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
+          gh add .
+          gh commit -m "Deployed via Bit GitHub Action"
           gh pr create --fill --base main --head release
           gh pr merge --rebase --admin --delete-branch
           git push origin --delete release || true
