ci: fix release bit workflow

--- a/.github/workflows/bit.yml
+++ b/.github/workflows/bit.yml
@@ -68,8 +68,10 @@ jobs:
       - name: Create Pull Request
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
+          git checkout -b "release"
           git add .
-          git commit -m "Deployed via Bit GitHub Action"
+          git commit -m "release: Bit GitHub Action"
+          git push -u origin "release"
           gh pr create --fill --base main --head release
           gh pr merge --rebase --admin --delete-branch
           git push origin --delete release || true
