--- a/.github/workflows/bit.yml
+++ b/.github/workflows/bit.yml
@@ -78,7 +78,7 @@ jobs:
           git commit -m "release: Bit GitHub Action"
           git push -u origin "release"
           gh pr create --fill --base main --head release
-          gh pr merge --rebase --admin --delete-branch
+          gh pr merge --admin --delete-branch
           git push origin --delete release || true
         shell: bash
         env:
