--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -6,7 +6,7 @@ repository:
   default_branch: main
   allow_squash_merge: true
   allow_merge_commit: false
-  allow_rebase_merge: false
+  allow_rebase_merge: true
   delete_branch_on_merge: true
   enable_automated_security_fixes: true
   enable_vulnerability_alerts: true
