--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -67,7 +67,8 @@
     "*": {
       "teambit.component/dev-files": {
         "devFilePatterns": [
-          "**/*.stories.+(js|ts|jsx|tsx)"
+          "**/*.stories.+(js|ts|jsx|tsx)",
+          "**/*.story.+(js|ts|jsx|tsx)"
         ]
       },
       "teambit.react/react": {}
